# VCR

./: .flutter-plugins-dependencies  .gitignore  .metadata  CHANGELOG.md  CODE_REVIEW.md  CONTRIBUTING.md  LICENSE  PROJECT_RECONSTRUCTION.md  PROJECT_RECONSTRUCTION_OPTIMIZED.md  README.md  REFACTOR_PLAN.md  _PHASE_SUMMARY_TEMP.txt  analysis_options.yaml  build_output.txt  check_encoding.py  generate_icon.py  glitch_fix_20260619.md  pubspec.yaml  rebuild.bat  rebuild.ps1  vcr_partial_channel_no_waveform_debug_20260616.md  vcr_pipeline_phase_a_20260621.md  架构优化方案.md
doc/: VCR_架构对比与修复计划.docx  vcr_framework_comparison.md
docs/: HIGH_THROUGHPUT_MIGRATION_PLAN.md  VCR_API接口文档.md  VCR_architecture_prompt.md  VCR_架构描述文档.md  (+7 more)
rust/: Cargo.toml  check_output.txt  fix_logs.py
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: data_receiver.rs  debug_api.rs  device_api.rs  gpu_api.rs  lua_api.rs  lua_core_scripts.rs  mod.rs  plot_api.rs  simple.rs  virtual_api.rs
rust/src/core/: app_context.rs  mod.rs
rust/src/core/device/: mod.rs  models.rs  preset.rs  registry.rs
rust/src/core/plot/: _create_files.py  analog_segment.rs  constants.rs  data_buffer.rs  envelope.rs  ffi_bridge.rs  lockfree_buffer.rs  lttb.rs  mod.rs  pipeline.rs  query.rs  segment.rs  time_bucket.rs
rust/src/core/protocol/: csv_parser.rs  mod.rs  registry.rs  trait.rs
rust/src/core/protocol/plugins/: csv.rs  mod.rs  modbus_rtu.rs  modbus_tcp.rs  raw.rs  scpi.rs
rust/src/core/session/: debug_session.rs  mod.rs  session_manager.rs
rust/src/core/transport/: mod.rs  modbus.rs  serial.rs  tcp.rs  virtual_channel.rs
rust/src/core/virtual_device/: data_generator.rs  mod.rs  scpi_responder.rs  simulator.rs
rust/src/renderer/: device.rs  gpu_renderer.rs  mod.rs  shader.wgsl  shader_lttb.wgsl  shader_waveform.wgsl
rust/src/renderer/backup/: gpu_renderer_original.rs
(+93 files in other folders)
