[package]
name = "vcr_lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
tokio = { version = "1", features = ["full"] }
tokio-serial = "5.4"
serialport = "4.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
parking_lot = "0.12"
crossbeam-channel = "0.5"
lazy_static = "1.4"
async-trait = "0.1"
futures = "0.3"
rand = "0.8"
mlua = { version = "0.10", features = ["lua53", "vendored", "serialize", "send"] }
dirs = "5"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
