[package]
name = "vcr_lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"

# GPU 加速渲染 (WebGPU)
wgpu = "23"
pollster = "0.3"  # 用于异步运行时（阻塞等待 wgpu 初始化）

# 强制统一 windows crate 版本（解决 wgpu-hal 的依赖冲突）
windows = "0.58"
tokio = { version = "1", features = ["full"] }
tokio-serial = "5.4"
serialport = "4.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
parking_lot = "0.12"
crossbeam-channel = "0.5"
lazy_static = "1.4"
once_cell = "1.19"
async-trait = "0.1"
futures = "0.3"
rand = "0.8"
mlua = { version = "0.10", features = ["lua53", "vendored", "serialize", "send"] }
dirs = "5"
bytemuck = { version = "1.25.0", features = ["derive"] }

[features]
default = []
lockfree = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
